--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
     padding-top: 2.5rem;
     padding-bottom: 6.9rem;
 
-    background: url("/images/football_1920.jpg") no-repeat center;
+    background: url("../images/football_1920.jpg") no-repeat center;
     background-size: cover;
     position: relative;
 
@@ -122,7 +122,7 @@ span {
         padding-top: 30px;
         padding-bottom: 80px;
 
-        background-image: url(/images/football_767.jpg);
+        background-image: url(../images/football_767.jpg);
     
     }
 
@@ -187,7 +187,7 @@ span {
     }
 
     .apple {
-        background-image: url("/svg/apple_logo_white.svg");
+        background-image: url("../svg/apple_logo_white.svg");
         
         background-size: 25px 25px;
         background-position: left 80px center;
@@ -196,7 +196,7 @@ span {
     }
     
     .google {
-        background-image: url("/svg/google-play.svg");
+        background-image: url("../svg/google-play.svg");
         
         background-size: 25px 25px;
         background-position: left 80px center;
@@ -228,7 +228,7 @@ span {
         padding-top: 35px;
         padding-bottom: 90px;
 
-        background-image: url(/images/football_1280.jpg);
+        background-image: url(../images/football_1280.jpg);
     }
 
     .header, .main, .footer {
@@ -301,7 +301,7 @@ span {
     }
 
     .apple {
-        background-image: url("/svg/apple_logo_white.svg");
+        background-image: url("../svg/apple_logo_white.svg");
         
         background-size: 50px 50px;
         background-position: left 44px center;
@@ -311,7 +311,7 @@ span {
     }
     
     .google {
-        background-image: url("/svg/google-play.svg");
+        background-image: url("../svg/google-play.svg");
         
         background-size: 50px 50px;
         background-position: left 55px center;
@@ -328,7 +328,7 @@ span {
         padding-top: 45px;
         padding-bottom: 105px;
 
-        background-image: url(/images/football_1920.jpg);
+        background-image: url(../images/football_1920.jpg);
     }
 
     .header, .main, .footer {
@@ -403,7 +403,7 @@ span {
     }
 
     .apple {
-        background-image: url("/svg/apple_logo_white.svg");
+        background-image: url("../svg/apple_logo_white.svg");
         
         background-size: 50px 50px;
         background-position: left 44px center;
@@ -413,7 +413,7 @@ span {
     }
     
     .google {
-        background-image: url("/svg/google-play.svg");
+        background-image: url("../svg/google-play.svg");
         
         background-size: 50px 50px;
         background-position: left 55px center;
@@ -428,7 +428,7 @@ span {
 @media (min-width: 1921px) {
     
     .header {
-        background-image: url(/images/football_1920.jpg);
+        background-image: url(../images/football_1920.jpg);
     }
     
     .logo-text {
